# squawk-cli-python-package

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-compose.yml  pyproject.toml  rust-toolchain
.github/workflows/: CI.yml
