[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "squawk-cli"
requires-python = ">=3.7"
license = { file = "origin/LICENSE" }
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Rust",
    "Programming Language :: SQL",
    "Topic :: Software Development :: Quality Assurance",
]
urls = { repository = "https://github.com/ods/squawk-cli-python-package" }

[tool.maturin]
bindings = "bin"
manifest-path = "origin/cli/Cargo.toml"
strip = true
