[build-system]
requires = ["maturin>=1.5.1"]
build-backend = "maturin"

[project]
name = "squawk-cli"
description = "Linter for PostgreSQL migrations"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "origin/LICENSE" }
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Rust",
    "Programming Language :: SQL",
    "Topic :: Software Development :: Quality Assurance",
]
urls = { repository = "https://github.com/ods/squawk-cli-python-package" }

[tool.maturin]
bindings = "bin"
manifest-path = "origin/cli/Cargo.toml"
strip = true
